# Excel_Rust

./: .gitignore  Cargo 2.toml  Cargo.toml  README.md  index.html  makefile
.cph/: .D_Arcology_On_Permafrost.cpp_92c723df32a3aff13e30bf3edb7212ca.prob
spreadsheet_client/: Cargo.toml  index.html
spreadsheet_client/src/: main.rs
spreadsheet_core/: Cargo.toml
spreadsheet_core/src/: display.rs  hash.rs  lib.rs  messages.rs  skeleton.rs
spreadsheet_server/: Cargo.toml
spreadsheet_server/src/: main.rs
src/: app.rs  display.rs  function.rs  handle_command.rs  hash.rs  lib.rs  main.rs  parsing.rs  skeleton.rs
testcase/: size.txt
testcase/input/: input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
testcase/output/: output1.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
