[package]
name = "spreadsheet_client"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
serde = "1.0"
serde_json = "1.0"
spreadsheet_core = { path = "../spreadsheet_core" }
futures = "0.3"
log = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "InputEvent", "SubmitEvent"] }
