[package]
name = "spreadsheet_server"
version = "0.1.0"
edition = "2024"

[dependencies]
spreadsheet_core = { path = "../spreadsheet_core" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
clap = { version = "4.5", features = ["derive"] }
